Made changes to fetch_housing file

--- a/src/fetch_housing_data.ipynb
+++ b/src/fetch_housing_data.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import os\n",
     "import tarfile\n",
-    "import urllib"
+    "import urllib\n",
+    "#This function downloads the "
    ]
   },
   {
